Basic/network_policy/database-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: database-netpol
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: database
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - podSelector:
            matchLabels:
              app: backend
      ports:
        - protocol: TCP
          port: 6379
